<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:padding="30dp">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/login"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_tv"
        android:text="@string/welcome_back_text"
        android:textSize="25sp"
        android:textColor="@color/my_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/please_sign_up_tv"
        android:text="@string/plese_login_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/my_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        android:layout_marginTop="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/please_sign_up_tv"
        android:hint="@string/email_hint"
        app:hintTextColor="@color/pink_200"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/my_primary"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginTop="50dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et_layout"
        android:hint="@string/password_hint"
        app:hintTextColor="@color/pink_200"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/my_primary"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login_text"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_et_layout"
        android:layout_marginTop="40dp"/>

    <ProgressBar
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/progress_bar_view"
        android:indeterminateTint="@color/pink_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:visibility="invisible"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dont_have_an_account_tv"
        android:text="@string/don_t_have_an_account_text"
        android:textColor="@color/my_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_tv"
        android:text="@string/create_account_text"
        android:textColor="@color/pink_700"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/dont_have_an_account_tv"
        app:layout_constraintBottom_toBottomOf="@id/dont_have_an_account_tv"
        app:layout_constraintStart_toEndOf="@id/dont_have_an_account_tv"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>