<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    tools:context=".CreateOrUpdateNoteActivity"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page_title"
        tools:text="Add New Note"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_note"
        android:src="@drawable/ic_save"
        app:layout_constraintTop_toTopOf="@id/page_title"
        app:layout_constraintBottom_toBottomOf="@id/page_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        android:layout_marginTop="40dp"
        android:background="@color/primary_light"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note_title"
            android:hint="@string/title_text"
            android:textColor="@color/black"
            android:padding="10dp"
            android:inputType="text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note_text"
            android:hint="@string/enter_jottings_here_text"
            android:layout_marginTop="10dp"
            android:minLines="20"
            android:gravity="top"
            android:textColor="@color/black"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:layout_marginTop="40dp"
        android:text="@string/cancel_text"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>